--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v1",
+  "name": "express",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,10 +12,12 @@
   "description": "",
   "dependencies": {
     "archiver": "^7.0.1",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "check-disk-space": "^3.4.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "formidable": "^3.5.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
